# chatroom-project

./: .env.chatroom  .gitignore  PROGRESS.md  README.md  pyproject.toml  start_hub.sh  test_admin.py  test_chat.py  test_features.py
chatroom/: __init__.py  config.py
chatroom/client/: __init__.py  chatroom_client.py
chatroom/server/: __init__.py  hub.py
chatroom/utils/: __init__.py
docs/: ADMIN_GUIDE.md  BOT_INTEGRATION.md  xiaohongshu-automation-guide.md
openclaw_chatroom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: jiaweisi_bot.py  jiaweisi_chatbot.py
skills/: chatroom_client.py  run
skills/chatroom-client/: SKILL.md  config.json
skills/chatroom-client/scripts/: client.py
src/: chatroom_hub.py
web/: index.html
