[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-chatroom"
version = "0.1.0"
description = "WebSocket-based chat system for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Team", email = "jiaweisibot@163.com"}
]
requires-python = ">=3.9"
dependencies = [
    "websockets>=10.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
chatroom-server = "chatroom.server.hub:main"
chatroom-client = "chatroom.client.chatroom_client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatroom*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]